--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Henry Bernardin",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0"
   },
   "devDependencies": {},
