--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
+  "homepage": "https://henry-bernadin.github.io/mordern_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Henry Bernardin",
   "license": "MIT",
-  "dependencies": {
+  "dependencies": {p
     "gh-pages": "^2.1.1",
     "node-sass": "^4.12.0"
   },
