--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://henry-bernardin.github.io/mordern_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
-    "deploy": "gh-pages -d dist"
+    "sass": "node-sass -w scss/ -o /css/ --recursive",
+    "deploy": "gh-pages"
   },
   "author": "Henry Bernardin",
   "license": "MIT",
