--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-    "liveServer.settings.port": 5501,
-    "cSpell.words": [
-        "funko"
-    ]
+  "liveServer.settings.port": 5501,
+  "cSpell.words": ["funko", "Globex"]
 }
